# helsinki-algorithms-project

./: .gitignore  README.md  encoding.py  main.py  primality.py  pyproject.toml  requirements.txt  rsa.py
.github/workflows/: build-python-executable.yml  python-app.yml  update-coverage.yml
docs/: implementation.md  info.md  specification.md  testing.md  user_guide.md
docs/weekly_reports/: week1.md  week2.md  week3.md  week3.py  week4.md  week5.md  week6.md
helsinki_algorithms_project/: encoding.py  erathostenes.py  keygen.py  primality.py  rsa.py
src/: main.py  primality.py
src/tests/: test_erathosthenes.py  test_primality.py
src/tests/data/: test_prime_values.json
tests/: test_e2e.py  test_encoding.py  test_erathosthenes.py  test_primality.py
tests/data/: test_factorization_values.json
