[tool.poetry]
name = "helsinki-algorithms-project"
version = "0.1.0"
description = ""
authors = ["Bence Hunyadi <hunyadi.bence1@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src/rsa", from = "." }
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12.5"
pytest = "^8.3.3"
pyasn1 = "^0.6.1"
coverage = "^7.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
